# grp_src

./: .gitignore  README.md
aruco_tracker/: ArucoTracker.cpp  ArucoTracker.hpp  CMakeLists.txt  package.xml
grp_system_description/: CMakeLists.txt  package.xml
grp_system_description/config/: ssmr_controllers.yaml  ssmr_real_controllers.yaml
grp_system_description/media/materials/scripts/: aruco_script.material  my_ground_1.material
grp_system_description/urdf/: aruco.blend  common_properties.xacro  free_camera.xacro  gps_sim.xacro  imu_sim.xacro  ssmr.xacro  ssmr_base.xacro  ssmr_gazebo_ros2_conrtol.xacro  ssmr_real_ros2_conrtol.xacro
grp_system_description/worlds/: empty_world.world  my_world.world  my_world_2.world
hw_interface_ssmr/: CMakeLists.txt  hw_interface_ssmr.xml  package.xml
hw_interface_ssmr/include/hw_interface_ssmr/: comm_class.hpp  mobile_based_hw_interface.hpp
hw_interface_ssmr/src/: comm_class.cpp  mobile_based_hw_interface.cpp
perception_pkg/: package.xml  setup.py
perception_pkg/perception_pkg/: choose_path.py  rrt_planner_b.py  vfg_navi.py  vfg_navi2.py  vision_Nav.py
px4_py_gui/: package.xml  setup.cfg  setup.py
px4_py_gui/config/: joystick.yaml
px4_py_gui/launch/: gui_controller.launch.py  joystick.launch.py
px4_py_gui/px4_py_gui/: plotter.py  px4_controller_gui.py
px4_test/: CMakeLists.txt  package.xml
px4_test/src/: offboard_control.cpp  offboard_control_srv.cpp
system_bringup/: CMakeLists.txt  package.xml
system_bringup/launch/: drone_sim.launch.py  free_camera.launch.py  px4_drone_controller.launch.py  ssmr_real.launch.py  ssmr_sim.launch.py
system_bringup/scripts/: spawn_drone.bash  todo_list.txt
uav_nav/: package.xml  setup.cfg  setup.py
uav_nav/uav_nav/: camera_click_to_pose.py  camera_position_controller.py  real_camera_driver.py
ugv_control_pkg/: package.xml  setup.cfg  setup.py  test1.world
ugv_control_pkg/ugv_control_pkg/: apply_torque_from_voltage.py  path_generator.py  publish_states_to_matlab.py
